[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "grafconflux"
version = "0.1.0"
description = "Download Grafana panels and upload them to Confluence."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests==2.32.3",
    "PyYAML==6.0.1",
    "blinker==1.7.0",
    "selenium==4.25.0",
    "selenium-wire==5.1.0",
    "python-dotenv==1.0.0",
    "atlassian-python-api>=3.41.0",
    "urllib3==2.2.3",
    "lxml==5.3.0",
    "demjson3==3.0.6",
    "pytz>=2024.2",
]

[project.scripts]
grafconflux = "grafconflux.cli:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["grafconflux*"]
